--- a/views/recipeSearch.ejs
+++ b/views/recipeSearch.ejs
@@ -6,7 +6,7 @@
   <body>
     <main>
       <h2>Select What Type of Meal Do You Want to Eat</h2>
-      <form action="" method="">
+      <form action="/recipeResults" method="GET">
         <label for="ingredient"></label>
         <input type="text" value="ingredient" name="keyword">
         <input type="submit" value="Search for Meal">
