cocktail page search and render

--- a/views/cocktailSearch.ejs
+++ b/views/cocktailSearch.ejs
@@ -6,7 +6,7 @@
   <body>
     <main>
       <h2>Select What Type of Drink You Want</h2>
-      <form action="" method="">
+      <form action="/cocktailResults" method="GET">
         <label for="vodka">Vodka</label>
         <input type="radio" value="vodka" name="keyword">
 
