--- a/views/tvshowSearch.ejs
+++ b/views/tvshowSearch.ejs
@@ -6,18 +6,19 @@
   <body>
     <main>
       <h2>Select What Type of Show Do You Want to Watch</h2>
-      <form action="" method="">
-        <label for="thriller">Thriller</label>
-        <input type="radio" value="thriller" name="keyword">
+      
+      <form action="/shows" method="GET">
+        <label for="keyword">input your search here</label>
+        <input type="text"  name="keyword">
 
-        <label for="drama">Drama</label>
+        <!-- <label for="drama">Drama</label>
         <input type="radio" value="drama" name="keyword">
 
         <label for="comedy">Comedy</label>
         <input type="radio" value="comedy" name="keyword">
 
         <label for="Action">Action</label>
-        <input type="radio" value="action" name="keyword">
+        <input type="radio" value="action" name="keyword"> -->
 
         <input type="submit" value="Search for TV Show">
       </form>
