--- a/views/tvshow.ejs
+++ b/views/tvshow.ejs
@@ -23,7 +23,7 @@
                 <img class="tvshow" src="<%=show.image%>" alt="<%=show.title%>">
                 <p id="tvshow-img"><%=show.url%></p>
                 <h3 id="tvshow-title"><%=show.name%></h3>
-                <div id="tvshow-summary"><%=show.summary%></div>
+                <div id="tvshow-summary"><%-show.summary%></div>
                 <button>Add to Favorites</button>
             </form>
             <%})%>
