css , some modiffication

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+  <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+  <title>Day8-Night</title>
+  <link rel="stylesheet" href="./styles.css" type="text/css">
+  <link rel="stylesheet" href="./reset.css" type="text/css">
+  <link rel="stylesheet" href="./styles/base.css" type="text/css">
+  <link rel="stylesheet" href="./styles/layout.css" type="text/css">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+  <title>day8_night</title>
 </head>
 <body>
   
@@ -21,7 +32,9 @@
 
     <input hidden id="spotifyButton" type="button">
     <button><a href="./spotifySearch"> Search For Music</a></button>
+
   </form>
+  <a href="./aboutus"> ABOUTUS PAGE</a>
 
 </body>
 </html>
