--- a/views/recipeSearch.ejs
+++ b/views/recipeSearch.ejs
@@ -8,7 +8,7 @@
       <h2>Select What Type of Meal Do You Want to Eat</h2>
       <form action="/recipeResults" method="GET">
         <label for="ingredient"></label>
-        <input type="text" value="ingredient" name="keyword">
+        <input type="text" value="" name="keyword">
         <input type="submit" value="Search for Meal">
       </form>
 
