--- a/views/tvshow.ejs
+++ b/views/tvshow.ejs
@@ -24,7 +24,8 @@
                 <p id="tvshow-img"><%=show.url%></p>
                 <h3 id="tvshow-title"><%=show.name%></h3>
                 <div id="tvshow-summary"><%-show.summary%></div>
-                <button>Add to Favorites</button>
+                <a href="/shows">FAVORITES movies</a>
+                
             </form>
             <%})%>
     </ul>
