--- a/views/recipeResults.ejs
+++ b/views/recipeResults.ejs
@@ -13,16 +13,16 @@
   <title>final project</title>
 </head>
 <nav>
-  <a href='/favorites'> FAVORITES</a>
+  <!-- <a href='/recipeFavorites'> FAVORITES PAGE</a> -->
   
 
 
 </nav>
 <body>
   <header>
-<h1 > RECIPE LIST   </h1>
+<h1 id="recipe-h1" > RECIPE LIST   </h1>
 </header>
-
+<a id="favo-btn" href='/recipeFavorites'> FAVORITES PAGE</a>
 
 
 <section id="main-contain">
@@ -31,17 +31,15 @@
      <div class="result-container">
           <img class="recipe-image" src="<%=results.image%>" alt="<%=results.title%>">
           <h3 id="recipe-title"><%=results.title%></h3>
-          <h4 id="recipe-id"><%=results.id%></h4>
           <p id="recipe-ingre"><%=results.ingredients%></p>
           <p id="recipe-cuisines"><%=results.cuisines%></p>
       </div>
-      <form action = "/faforite" method="post">
+      <form action = "/recipeFavorites" method="post">
         <input type="hidden" name="image" value="<%= results.image%>">
         <input type="hidden" name="title" value="<%= results.title%>">
-        <input type="hidden" name="id" value="<%= results.id%>">
         <input type="hidden" name="ingredients" value="<%= results.ingredients%>">
         <input type="hidden" name="cusines" value="<%= results.cusines%>">
-        <button class="button-black" type="submit">add to Database</button>
+        <button id="Database-btn" type="submit">add to Database</button>
         </form>
         
     <% }) %>
