cocktail results favorite delete functioning

--- a/views/cocktailResults.ejs
+++ b/views/cocktailResults.ejs
@@ -2,18 +2,23 @@
 <html>
   <head>
     <title>Cocktail Search Display</title>
-
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./styles/stylesTaylor.css">
   </head>
   <body>
     <section id= "drinkResults">
+      <a href="/cocktailFavorites">Saved Cocktails</a>
       <% data.forEach(value => { %>
-      <h2 id="drinkName"><%= value.drinkName %></h2>
-      <img id="img" src="<%= value.img %>"></img>
-      <li hidden id="idDrink"><%= value.idDrink %></li>
+        <h2 id="drinkName"><%= value.drinkName %></h2>
+        <img id="img" src="<%= value.img %>"></img>
+        <li hidden id="idDrink"><%= value.idDrink %></li>
+       <form action="/faves" method="POST">
+        <input type="hidden" name="drinkName" value="<%= value.drinkName %>">
+        <input type="hidden" name="img" value="<%= value.img %>">
+        <input type="hidden" name="idDrink" value="<%= value.idDrink %>">
+        <button type="submit">Favorite this Drink</button>
+      </form>
     <% }) %>
-        <div id="save-button">
-          
-        </div>
     </section>
   
   </body>
