--- a/views/cocktailSearch.ejs
+++ b/views/cocktailSearch.ejs
@@ -10,8 +10,8 @@
         <label for="vodka">Vodka</label>
         <input type="radio" value="vodka" name="keyword">
 
-        <label for="whiskey">Whiskey</label>
-        <input type="radio" value="whiskey" name="keyword">
+        <label for="scotch">Scotch</label>
+        <input type="radio" value="scotch" name="keyword">
 
         <label for="tequila">Tequila</label>
         <input type="radio" value="tequila" name="keyword">
