--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./reset.css" type="text/css">
   <link rel="stylesheet" href="./styles/base.css" type="text/css">
   <link rel="stylesheet" href="./styles/layout.css" type="text/css">
+  <link rel="stylesheet" href="./styles/indexTaylor.css" type="text/css">
   
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,22 +20,26 @@
   <title>day8_night</title>
 </head>
 <body>
+  <header>
+    <a href="./aboutus"> ABOUTUS PAGE</a>
+  </header>
   
+  <main>
   <form action="">
     <input hidden id="cocktailButton" type="button">
-    <button><a href="./cocktailSearch">Search For Cocktail</a></button>
+    <button><a href="./cocktailSearch">DRINK</a></button>
 
     <input hidden id="tvShowButton" type="button">
-    <button><a href="./tvshowSearch">Search For TV Show</a></button>
+    <button><a href="./tvshowSearch">WATCH</a></button>
 
     <input hidden id="recipeButton" type="button">
-    <button><a href="./recipeSearch">Search for a Meal Idea</a></button>
+    <button><a href="./recipeSearch">EAT</a></button>
 
     <input hidden id="spotifyButton" type="button">
-    <button><a href="./spotifySearch"> Search For Music</a></button>
+    <button><a href="./spotifySearch">LISTEN</a></button>
 
   </form>
-  <a href="./aboutus"> ABOUTUS PAGE</a>
+</main>
 
 </body>
 </html>
