--- a/views/recipeFavorites.ejs
+++ b/views/recipeFavorites.ejs
@@ -32,7 +32,7 @@
     <!-- <button class="button-black" type="submit">add to Database</button> -->
     </form>
 
-    <form method="POST" action="/delete/<%=results.id %>?_method=DELETE">
+    <form method="POST" action="/deleteRecipe/<%=results.id %>?_method=DELETE">
   
       <button id="delete-btn" >delete recipe </button>
      </form>
