--- a/views/tvshowResults.ejs
+++ b/views/tvshowResults.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/reset.css" type="text/css">
     <link rel="stylesheet" href="/styles/base.css" type="text/css">
     <link rel="stylesheet" href="/styles/layout.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="./styles/stylesTaylor.css">
+
 </head>
 
 <nav>
@@ -16,9 +18,11 @@
     <header>
         <h1>TV-SHOW</h1>
     </header>
-    <section id= "main-container"></section>
-    <ul class="tv-show">
+    
+    <main>
+        
         <%values.forEach(show=> {%>
+            <section id= "main-container">
             <img class="tvshow" src="<%=show.image%>" alt="<%=show.title%>">
             <h3 id="tvshow-title"><%=show.name%></h3>
             <div id="tvshow-summary"><%-show.summary%></div>
@@ -29,11 +33,10 @@
                 <input type="hidden" name="tvshow_name" value="<%=show.name%>">
                 <input type="hidden" name="summary" value="<%=show.summary%>">
                 <input type="hidden" name="searchterm" value="<%=searchterm%>">
-
-
             </form>
+        </section>
             <%})%>
-    </ul>
+</main>
 </body>
 
 </html>
