--- a/views/tvshowFavorites.ejs
+++ b/views/tvshowFavorites.ejs
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./styles/stylesTaylor.css">
     <title>FAVORITES Cookies</title>
 </head>
 <body>
 
-    <ul class="tv-show">
+ <main>
+     
         <%data.forEach(show=> {%>
-            <li>
+            <section>
+
             <img class="tvshow" src="<%=show.img%>" alt="<%=show.title%>">
             <h3 id="tvshow-title"><%=show.name%></h3>
             <div id="tvshow-summary"><%-show.summary%></div>
             <form action="/delete/<%=show.id%>?_method=DELETE" method="POST">
             <button type="submit">Delete Show</button>
             </form>
-        </li>
+        </section>
             <%})%>
-    </ul>
 
+</main>
 </body>
 </html>
