--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   <title>day8_night</title>
 </head>
-<body>
+<body id="homepage">
   <header>
     <a href="./aboutus"> ABOUTUS PAGE</a>
   </header>
