--- a/views/tvshowResults.ejs
+++ b/views/tvshowResults.ejs
@@ -32,7 +32,7 @@
             <h3 id="tvshow-title"><%=show.name%></h3>
             <!-- <div id="tvshow-summary"><%-show.summary%></div> -->
             <form action="/saved" method="POST">
-                <button id="Database-tv">Add to Favorites</button>
+                <button id="Database-tv1">Add to Favorites</button>
                 <input type="hidden" name="image" value="<%=show.image%>">
                 <input type="hidden" name="url" value="<%=show.url%>">
                 <input type="hidden" name="tvshow_name" value="<%=show.name%>">
