--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -186,6 +186,13 @@ img{
   color: red;
 } 
 
+#search-body{
+  background-image:url("../images/foodsearch.jpg"); 
 
+}
+#homepage{
+  background-image:url("../images/"); 
+
+}
 
 
