--- a/views/recipeResults.ejs
+++ b/views/recipeResults.ejs
@@ -21,6 +21,7 @@
 <h1 id="recipe-h1" > RECIPE LIST   </h1>
 </header>
 <a id="favo-btn" href='/recipeFavorites'> FAVORITES PAGE</a>
+<li><a id="home-btn" href='/'> Go to Home Page </a></li>
 
 
 <main>
@@ -34,6 +35,7 @@
         <input type="hidden" name="title" value="<%= results.title%>">
         <input type="hidden" name="ingredients" value="<%= results.ingredients%>">
         <input type="hidden" name="cusines" value="<%= results.cusines%>">
+        <input type="hidden" name="keyword" value="<%= results.keyword%>">
         <button id="Database-btn" type="submit">add to Database</button>
         </form>
 
