grid for recipes added

--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,7 +1,7 @@
 
 
 
-#tv-h1{
+/* #tv-h1{
   text-align: center;
   color: white;                            
   font-family: 'Lobster', cursive;
@@ -190,4 +190,4 @@
   background-image:url("../images/my favorite.jpg"); 
 
 
-}
+} */
