--- a/views/cocktailResults.ejs
+++ b/views/cocktailResults.ejs
@@ -4,6 +4,7 @@
     <title>Cocktail Search Display</title>
     <link rel="stylesheet" type="text/css" href="./styles/reset.css">
     <link rel="stylesheet" type="text/css" href="./styles/stylesTaylor.css">
+    
   </head>
   <body>
 
@@ -13,7 +14,13 @@
     </header>
 
     <main>
-    
+      <header>
+        <ul>
+         <li><a href="./aboutus"> ABOUTUS PAGE</a></li> 
+          <li><a href="./allFavorites">FAVORITES PAGE</a></li>
+      </ul>
+      </header>
+      
       <% data.forEach(value => { %>
         <section id= "drinkResults">
 
