--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,12 @@
   <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
   <title>Day8-Night</title>
   <link rel="stylesheet" href="./styles.css" type="text/css">
-  <link rel="stylesheet" href="./reset.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/base.css" type="text/css">
   <link rel="stylesheet" href="./styles/layout.css" type="text/css">
   <link rel="stylesheet" href="./styles/indexTaylor.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="./styles/rain.css">
+
   
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,9 +23,13 @@
 </head>
 <body>
   <header>
-    <a href="./aboutus"> ABOUTUS PAGE</a>
+    <ul>
+     <li><a href="./aboutus"> ABOUT US PAGE</a></li> 
+      <li><a href="./allFavorites">FAVORITES PAGE</a></li>
+  </ul>
   </header>
-  
+
+
   <main>
   <form action="">
     <input hidden id="cocktailButton" type="button">
