--- a/views/tvshowResults.ejs
+++ b/views/tvshowResults.ejs
@@ -20,9 +20,12 @@
 
 <body id="resultpage">
     <header>
-        <h1 id=tv-h1>TV-SHOW LIST </h1>
-        <a id="favo-btn" href="/favorites">FAVORITES TV-SHOW</a>
-    </header>
+        <ul>
+         <li><a href="./aboutus"> ABOUTUS PAGE</a></li> 
+          <li><a href="./allFavorites">FAVORITES PAGE</a></li>
+          <li><a href="/">HOME PAGE</a></li>
+      </ul>
+      </header>
     
     <main>
         
