--- a/views/allFavorites.ejs
+++ b/views/allFavorites.ejs
@@ -2,10 +2,35 @@
 <html>
   <head>
     <title>All Favorites</title>
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/indexTaylor.css" type="text/css">
+
   </head>
   <body>
-   <section> <%- include('/cocktailFavorites') %></section>
-   <section> </section>
-   <section></section>
+    <header>
+      <ul>
+        <li><a href="./aboutus"> ABOUT US PAGE</a></li> 
+         <li><a href="/">HOME PAGE</a></li>
+     </ul>
+
+    </header>
+    <body>
+      <main>
+        <form action="">
+          <input hidden id="cocktailButton" type="button">
+          <button><a href="./cocktailFavorites">DRINK FAVORITES</a></button>
+      
+          <input hidden id="tvShowButton" type="button">
+          <button><a href="./favorites">TV SHOW FAVORITES</a></button>
+      
+          <input hidden id="recipeButton" type="button">
+          <button><a href="./recipeFavorites">FOOD FAVORITES</a></button>
+      
+          <input hidden id="spotifyButton" type="button">
+          <button><a href="./spotifySearch">LISTEN</a></button>
+      
+        </form>
+      </main>
+    </body>
   </body>
 </html>
