--- a/views/recipeResults.ejs
+++ b/views/recipeResults.ejs
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/base.css" >
   <link rel="stylesheet" href="./styles/layouts.css" >
-  <link rel="stylesheet" href="./styles/modules.css"> 
+  <link rel="stylesheet" href="./styles/modules.css">
+  <link rel="stylesheet" type="text/css" href="./styles/stylesTaylor.css">
   
 
   <title>final project</title>
@@ -17,10 +18,16 @@
   
 </nav>
 <body>
-  <header>
+    <header>
+      <ul>
+       <li><a href="./aboutus"> ABOUT US PAGE</a></li> 
+        <li><a href="./allFavorites">FAVORITES PAGE</a></li>
+        <li><a href="/">HOME PAGE</a></li>
+    </ul>
+    </header>
+
+<!-- <a id="favo-btn" href='/recipeFavorites'> FAVORITES PAGE</a> -->
 <h1 id="recipe-h1" > RECIPE LIST   </h1>
-</header>
-<a id="favo-btn" href='/recipeFavorites'> FAVORITES PAGE</a>
 
 
 <main>
