styling on home page and favorite page

--- a/views/allFavorites.ejs
+++ b/views/allFavorites.ejs
@@ -4,6 +4,8 @@
     <title>All Favorites</title>
     <link rel="stylesheet" type="text/css" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/indexTaylor.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -16,18 +18,19 @@
     </header>
     <body>
       <main>
+        <h1>DAY-8 NIGHT: <span>REVIEW FAVORITES</span></h1>
         <form action="">
-          <input hidden id="cocktailButton" type="button">
-          <button><a href="./cocktailFavorites">DRINK FAVORITES</a></button>
+          <input hidden  type="button">
+          <button id="cocktailButton"><a href="./cocktailFavorites">DRINK FAVORITES</a></button>
       
-          <input hidden id="tvShowButton" type="button">
-          <button><a href="./favorites">TV SHOW FAVORITES</a></button>
+          <input hidden  type="button">
+          <button id="tvShowButton"><a href="./favorites">SHOW FAVORITES</a></button>
       
-          <input hidden id="recipeButton" type="button">
-          <button><a href="./recipeFavorites">FOOD FAVORITES</a></button>
+          <input hidden  type="button">
+          <button id="recipeButton"><a href="./recipeFavorites">FOOD FAVORITES</a></button>
       
-          <input hidden id="spotifyButton" type="button">
-          <button><a href="./spotifySearch">LISTEN</a></button>
+          <input hidden type="button">
+          <button id="spotifyButton"><a href="./spotifySearch">MUSIC FAVORITES</a></button>
       
         </form>
       </main>
