--- a/public/styles/indexTaylor.css
+++ b/public/styles/indexTaylor.css
@@ -1,5 +1,25 @@
 body {
-  background: aliceblue;
+  background: url(../images/aaron-burden-V6nzK_QYN4g-unsplash.jpg);
+  
+}
+
+header{
+  width: 100%;
+  height: 100px;
+}
+
+header li{
+  font-family: 'Poppins', sans-serif;
+  margin-left: 10px;
+  margin-top: 10px;
+  font-size: 20px;
+}
+
+h1 {
+  color: white;
+  margin: auto;
+  font-family: 'Poppins', sans-serif;
+  font-size: 40pt;
 }
 
 main {
@@ -11,12 +31,52 @@ main {
 button {
   width: 300px;
   height: 300px;
-  background: pink;
+  /* background: pink; */
   margin-top:5px;
+  font-size: 20px;
+  border-radius: 60%;
+  font-family: 'Poppins', sans-serif;
 }
 
-button:hover {
+span {
+  font-style: italic;
+}
+
+#cocktailButton{
+  background:#4279a3;
+}
+
+#cocktailButton:hover {
   background: honeydew;
   transition: background .5s;
 }
+
+#tvShowButton{
+  background: #476c8a;
+}
+
+#tvShowButton:hover {
+  background: honeydew;
+  transition: background .5s;
+}
+
+#recipeButton{
+  background: #49657b;
+}
+
+#recipeButton:hover {
+  background: honeydew;
+  transition: background .5s;
+}
+
+#spotifyButton{
+  background: #7f8e9e;
+}
+
+#spotifyButton:hover {
+  background: honeydew;
+  transition: background .5s;
+}
+
+
 
