--- a/views/recipeResults.ejs
+++ b/views/recipeResults.ejs
@@ -30,8 +30,10 @@
 <h1 id="recipe-h1" > RECIPE LIST   </h1>
 
 </header>
+<div>
 <a id="favo-btn" href='/recipeFavorites'> FAVORITES PAGE</a>
-<li><a id="home-btn" href='/'> Go to Home Page </a></li>
+<!-- <li><a id="home-btn" href='/'> Go to Home Page </a></li> -->
+</div>
 
 
 
