--- a/views/tvshowFavorites.ejs
+++ b/views/tvshowFavorites.ejs
@@ -4,9 +4,9 @@
    
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/reset.css">
-  <!-- <link rel="stylesheet" href="./styles/base.css" >
-  <link rel="stylesheet" href="./styles/layouts.css" > -->
-  <!-- <link rel="stylesheet" href="./styles/modules.css">  -->
+  <link rel="stylesheet" href="./styles/base.css" >
+  <link rel="stylesheet" href="./styles/layouts.css" > 
+  <link rel="stylesheet" href="./styles/modules.css"> 
    <link rel="stylesheet" type="text/css" href="./styles/stylesTaylor.css">
    <link rel="stylesheet" href="../public/styles/gridstyles.css">
   <title>final project</title>
@@ -26,6 +26,7 @@
             <section>
 
             <img class="tvshow" src="<%=show.img%>" alt="<%=show.title%>">
+            
             <h3 id="tvshow-title"><%=show.name%></h3>
             <!-- <div id="tvshow-summary"><%-show.summary%></div> -->
             <form action="/delete/<%=show.id%>?_method=DELETE" method="POST">
