--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
   <title>Day8-Night</title>
-  <link rel="stylesheet" href="/styles.css" type="text/css">
-  <link rel="stylesheet" href="/reset.css" type="text/css">
+  <link rel="stylesheet" href="./styles.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/base.css" type="text/css">
   <link rel="stylesheet" href="/styles/layout.css" type="text/css">
   
@@ -18,6 +18,7 @@
 <body id="aboutmebody">
   <header>
     <h1 id="about1">Day8-night</h1>
+    <li><a href="/">HOME PAGE</a></li>
     <div class="aboutSection"></div>
     <h2 id="about2">About Our Project</h2>
     <p id="description">For our final project, our team is making an app , "day8-night" . This app it will allow us to enjoy our date night by going through D8 Night app and selecting the categories that are important to us based on the selection that is given.
