--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
   <title>Day8-Night</title>
-  <!-- <link rel="stylesheet" href="./styles.css" type="text/css"> -->
+   
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
-  <!-- <link rel="stylesheet" href="./styles/base.css" type="text/css"> -->
-  <!-- <link rel="stylesheet" href="./styles/layout.css" type="text/css"> -->
+  <!-- <link rel="stylesheet" href="./styles/modules.css" >
+   <link rel="stylesheet" href="./styles/base.css">
+  <link rel="stylesheet" href="./styles/layout.css" > -->
   <link rel="stylesheet" href="./styles/indexTaylor.css" type="text/css">
 
   
@@ -23,7 +24,7 @@
   <title>day8_night</title>
 </head>
 <body id="homepage">
-  <header>
+  <header id="nav">
     <ul>
      <li><a href="./aboutus"> ABOUT US PAGE</a></li> 
       <li><a href="./allFavorites">FAVORITES PAGE</a></li>
