--- a/public/styles/stylesTaylor.css
+++ b/public/styles/stylesTaylor.css
@@ -39,4 +39,76 @@ img{
   width: 100%
 }
 
+#cock-body{
+  background-color:antiquewhite; 
+  margin-left: 30px;
+ 
+
+
+}
+#drinkResults{
+  margin-top:90px;
+}
+#drinkFavoriteResults{
+  margin-top:60px; 
+}
+
+#cock-fav-btn{
+  border-radius: 6px;
+  border: 0px;
+   margin-bottom: 10px; 
+  font-size: large;
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-family: 'Lobster', cursive;
+  margin-left:5px;
+ 
+  margin-top: 10px; 
+
+}
+
+#drinkName{
+  font-weight: bold; 
+  font-family: 'Lobster', cursive;
+  text-align: center;
+  color:palevioletred;
+
+}
+ nav{
+  margin-left: 50px;
+  margin-top:10px;
+  font-weight: bolder;
+  
+} 
+#header{
+  margin-top: 10px;
+  margin-left: 50px;
+  font-weight: bolder;
+  
+}
+a:link {
+  text-decoration: none;
+  font-family:'Courier New', Courier, monospace
+  
+
+}
+#delete-btn{
+  border-radius: 6px;
+  border: 24px;
+   margin-bottom: px; 
+  font-size: large;
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-family: 'Lobster', cursive;
+  margin-left:20px;
+  
+ 
+  margin-top: 20px; 
+
+}
+
 
