--- a/views/allFavorites.ejs
+++ b/views/allFavorites.ejs
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <header>
+    <header id="nav">
       <ul>
         <li><a href="./aboutus"> ABOUT US PAGE</a></li> 
          <li><a href="/">HOME PAGE</a></li>
